Cleaned up CSS. Fixed related item horizontal alignment.

--- a/src/HearstExplorer/browseByImage/static/browseByImage/global.scss
+++ b/src/HearstExplorer/browseByImage/static/browseByImage/global.scss
@@ -1,9 +1,24 @@
+$background-color: #666;
+$hover-border-color: #fff;
+
+@mixin imageAndHover($max-dimension) {
+    max-width: $max-dimension;
+    max-height: $max-dimension;
+    border: 1px solid $background-color;
+    transition: all 0.25s ease-in-out;
+
+    &:hover {
+        border: 1px solid $hover-border-color;
+        transition: all 0.5s ease-in-out;
+    }
+}
+
 h1 {
     text-align: center;
 }
 
 body {
-    background-color: #333;
+    background-color: $background-color;
 }
 
 .debug {
@@ -22,10 +37,8 @@ a {
         list-style-type: none;
         display: inline;
 
-        .heroImage {
-            $max-dimension: 250px;
-            max-width: $max-dimension;
-            max-height: $max-dimension;
+        .image {
+            @include imageAndHover(250px);
         }
     }
 }
@@ -35,6 +48,15 @@ a {
         font-size: 2rem;
         font-weight: 600;
         text-transform: capitalize;
+    }
+    .artifact {
+        margin-right: 20px;
+        list-style-type: none;
+        display: inline;
+
+        .image {
+            @include imageAndHover(100px);
+        }
     }
 
 }
